[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/Art/tiles.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Buttons/grey_button03.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Buttons/grey_button05.png" type="Texture" id=3]
[ext_resource path="res://Resources/UITheme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Fonts/Nunito-Light.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/UIScenes/Menu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 5 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="OBackground" type="ColorRect" parent="CenterContainer"]
modulate = Color( 0.2, 0.2, 0.2, 0.6 )
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )

[node name="MBorder" type="ColorRect" parent="CenterContainer"]
modulate = Color( 0.2, 0.2, 0.2, 1 )
margin_left = 337.0
margin_top = 177.0
margin_right = 943.0
margin_bottom = 543.0
rect_min_size = Vector2( 606, 366 )

[node name="MBackground" type="TextureRect" parent="CenterContainer"]
margin_left = 340.0
margin_top = 180.0
margin_right = 940.0
margin_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 600, 360 )
texture = ExtResource( 1 )
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 531.0
margin_top = 213.0
margin_right = 748.0
margin_bottom = 506.0
grow_horizontal = 2
custom_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 217.0
margin_bottom = 56.0
theme = ExtResource( 4 )
text = "Pause Menu"
align = 1

[node name="ResumeB" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_left = 13.0
margin_top = 76.0
margin_right = 203.0
margin_bottom = 125.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/ResumeB"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -5.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "Continue"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="RestartB" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_left = 13.0
margin_top = 145.0
margin_right = 203.0
margin_bottom = 194.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/RestartB"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -5.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "Restart"
align = 1
valign = 1

[node name="Separator" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 217.0
margin_bottom = 224.0
rect_min_size = Vector2( 0, 10 )

[node name="QuitB" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_left = 13.0
margin_top = 244.0
margin_right = 203.0
margin_bottom = 293.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/QuitB"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -5.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "Quit"
align = 1
valign = 1

[connection signal="button_up" from="CenterContainer/VBoxContainer/ResumeB" to="." method="_on_ResumeB_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/RestartB" to="." method="_on_RestartB_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/QuitB" to="." method="_on_QuitB_button_up"]
